<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_General" Id="{9e2d1f25-3e4d-4883-885c-408b2d8ae1b0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	PlusOutput		:S_PlusOutput;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>